layout bug fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ body {
     background: url(../imagens/wallpaperflare.com_wallpaper.jpg) no-repeat center center;
     background-size: cover;
     color: #333333;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body.modo-escuro {
@@ -50,6 +50,7 @@ main .listagem-pokemon {
     justify-content: center;
     max-width: 68.75rem;
     gap: 15px;
+    padding: 0 10px;
 }
 
 @keyframes downUp{
